about_me.css
body {
    background: black;
}

#nav-bar {
    background: black;
}

.heading {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 10px;
}
.logo {
    filter: invert(1);
}

.titles h1 {
    font-size: 5rem;
    color: D0F288;
    font-family: 'Caveat', cursive;
    font-family: 'Libre Baskerville', serif;
    font-family: 'Rubik', sans-serif;
    font-weight: bold;
}

.contact-div {
    color: white;
    width: 50%;
    position: relative;
    left: 35%;
    font-size: 1.5rem;
}

.about-me {
    display: flex;
    flex-direction: column;
}

.heading p {
    color: white;
    font-size: 1.7rem;
    width: 50%;
    position: relative;
    left: 25%;
}

.project-button {
    border-width: 0;
    border-radius: 20px;
    font-size: 2rem;
    padding-left: 10px;
    padding-right: 10px;
    color: white;
    background-color: #7962bd;
}

.project-button img {
    margin-bottom: 8px;
}

.project-button:hover {
    border-color: white;
    border-width: 2px;
    color: white;
}

